# cpp-qt-opengl

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
src/: main.cpp
src/data/: Candle.h  CandleStick.cpp  CandleStick.h  Data.cpp  Data.h
src/pch/: pch.h
src/render/: Chart.cpp  Chart.h  Render.h  RenderWnd.cpp  RenderWnd.h
src/widgets/: CandleStickGraphicsView.cpp  CandleStickGraphicsView.h  CandleStickWidget.cpp  CandleStickWidget.h  CandlesStickGraphicsItem.cpp  CandlesStickGraphicsItem.h
src/window/: MainWindow.cpp  MainWindow.h
